--- a/about.html
+++ b/about.html
@@ -24,18 +24,20 @@
 </head>
 <body>
     <div id="tempo">
-    <!-- <ul>
-        <li>
-            hello
-        </li>
-        <li>
-            World
-        </li> -->
-    </ul>
-    <div class="t1">
-        <h1 >
-            MY INTRO
-        </h1>
+        <div>
+            <div class="img_1"> 
+                <img class="my_pic" src="image_sumit.jpg">
+            </div>
+            <div class="short-intro">
+                <p class="texts">I am Sumit, a second-year student at BIT Mesra, currently pursuing B.Tech in Artificial Intelligence and Machine Learning.</p>
+                <p class="texts">I was born and raised in Jamshedpur.</p>
+                <h3 class="h3_">My Hobbies</h3>
+                <p class="texts">In middle school, I loved playing football and participated in numerous track events such as the 100m and 200m. I also won many interschool events.</p>
+                <p class="texts">I also used to draw and paint, and I even won the third prize in a state-level drawing competition when I was in 7th grade.</p>
+                <p class="texts">Nowadays, I dedicate most of my time to studies, and in my free time, I love watching anime. Shonen and seinen are the genres that I prefer.</p>
+            </div>
+        </div>
+    
 
     </div>
 
@@ -43,6 +45,12 @@
 
     </div>
     <div id="tempo2">
+        <div class="education">
+            <div>
+                <h1 class="heading">Educational Background</h1>
+            </div>
+
+        </div>
         
     </div>
 
