--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                       <a class="nav-link" href="">Skills</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="">Projects</a>
+                      <a class="nav-link" href="./projects.html">Projects</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#footer">Contact me</a>
