--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                       <a class="nav-link" href="./about.html">About</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="">Skills</a>
+                      <a class="nav-link" href="./skills.html">Skills</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="./projects.html">Projects</a>
