updated educational-background page

--- a/about.html
+++ b/about.html
@@ -55,13 +55,13 @@
                   <div class="carousel-inner">
                       <div class="carousel-item active" >
                         <h2 class="edu-title">C.B.S.E Matriculation</h2>
-                        <img class="edu-image Finals-img" src="finals.jpg" alt="image">
+                        <img class="Finals-img" src="finals.jpg" alt="image">
                         <ul>
                             <li class="texts_1">year : 2019</li>
                             <li class="texts_1">percentage : 92.16%</li>
                             <li class="texts_1">School: Valley View School</li>
                             <li class="texts_1">Extra-Curricular Activities:<ul>
-                                <li class="texts_1">Football: Won TATA-MOTOTORS innter school football tournament</li>
+                                <li class="texts_1">Football: Won TATA-MOTORS innter school football tournament</li>
                                 <li class="texts_1">Drawing: Won 3rd prize in a state level drawing competition</li>
                                 <li class="texts_1">Won 4x100m relay twice in TATA-MOTORS inter school sports event</li>
 
@@ -70,9 +70,12 @@
                       </div>
                       <div class="carousel-item" >
                         <h2 class="edu-title">Intermediate</h2>
-                        <img class="edu-image" src="" alt="">
+                        <img class="edu-image border border-white border-end-0" src="images/sumit_image.jpg" alt="">
                         <ul>
-                          <li> year: 2021</li>
+                          <li class="texts_1"> year: 2021</li>
+                          <li class="texts_1">percentage : 94.4%</li>
+                          <li class="texts_1">School : Valley View School</li>
+                          <li class="texts_1">Subjects: Physics,Chemistry,Maths with Computer Science</li>
                         </ul>
                          
                       </div>
