updated about projects and skills page

--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,33 @@
 
 
     <script src="https://kit.fontawesome.com/82dd9819c0.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Hedvig+Letters+Serif:opsz@12..24&family=Montserrat:wght@100;900&family=Pacifico&family=Permanent+Marker&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
+
+    <style>
+        h2{
+            font-family: "Permanent Marker";
+        }
+        p{
+            font-family: "Hedvig Letters Serif";
+        }
+        .ico{
+            font-family: "Hedvig Letters Serif";
+        }
+        @media (max-width:680px){
+            .contain{
+                display:flex;
+                flex-direction: column;
+            }
+            h1{
+                font-size: 2rem;
+            }
+
+        }
+
+    </style>
 </head>
 <body class="project-page">
     <h1 style="color: #A5D7E8;;">My Projects</h1>
@@ -25,7 +52,7 @@
                 <img class="card-img-top" src="images/tindog_img.png">
                 <p class="card-text"></p>
                 <p class="card-text">Created this project while learning Bootstrap from Angela Yu</p>
-                <a href="#" class="btn btn-outline-dark  card-link">GitHub <i class="fa-brands fa-github fa-bounce fa-xl"></i></a>
+                <a href="#" class="btn btn-outline-dark  card-link ico">GitHub <i class="fa-brands fa-github fa-bounce fa-xl"></i></a>
             </div>
 
         </div>
@@ -34,7 +61,7 @@
                 <h2 class="card-title card_text">Simon Game</h2>
                 <img class="card-img-top card_img" style="padding: 20px;" src="images/simon_img.png">
                 <p class="card-text card_text">Created this project while learning javascript from Angela Yu</p>
-                <a href="#" class="btn btn-info  card-link">GitHub <i class="fa-brands fa-github fa-bounce fa-xl"></i></a>
+                <a href="#" class="btn btn-info  card-link ico">GitHub <i class="fa-brands fa-github fa-bounce fa-xl"></i></a>
             </div>
             
             
@@ -45,7 +72,7 @@
                 <h2 class="card-title">Drum-Kit</h2>
                 <img class="card-img-top" src="images/drum_ig.png">
                 <p class="card-text">Created this project while learning javascript from Angela Yu.</p>
-                <a href="#" class="btn btn-outline-dark  card-link">GitHub <i class="fa-brands fa-github fa-bounce fa-xl"></i></a>
+                <a href="#" class="btn btn-outline-dark  card-link ico">GitHub <i class="fa-brands fa-github fa-bounce fa-xl"></i></a>
             </div>
 
         </div>
