--- a/skills.html
+++ b/skills.html
@@ -11,10 +11,42 @@
     <!-- Bootstrap JS -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/js/bootstrap.min.js" integrity="sha512-UR25UO94eTnCVwjbXozyeVd6ZqpaAE9naiEUBK/A+QDbfSTQFhPGj5lOR6d8tsgbBk84Ggb5A3EkjsOgPRPcKA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Hedvig+Letters+Serif:opsz@12..24&family=Montserrat:wght@100;900&family=Pacifico&family=Permanent+Marker&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+   
+   
    <style>
     h3{
         color: aliceblue;
+        font-family: "Agbalumo";
     }
+    @media (max-width:778px){
+        .skills{
+            width: 60%;
+            height: 180px;
+            padding-top: 1px;
+        }
+        h1{
+            font-size: 2rem;
+            padding-top: 15px;
+            margin-bottom: 0px;
+        }
+        h3{
+            font-size: 1rem;
+        }
+        .im{
+            height: 70px;
+            width: 70px;
+        }
+        .temp{
+            height: 10px;
+        }
+
+
+    }
+
    </style>
 </head>
 <body id="skills-page">
@@ -25,7 +57,7 @@
             <div class="card-body">
                 <img class="card-img im" src="images/html.png">
                 <h3 class="card-title">HTML</h3>
-                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress temp" role="progressbar" aria-label="Animated striped example" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 55%"></div>
                   </div>
             </div>
@@ -35,39 +67,39 @@
             <div class="card-body">
                 <img class="card-img im" src="images/css.png">
                 <h3 class="card-title">CSS</h3>
-                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress temp" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
                   </div>
             </div>
 
         </div>
 
-        <div class="css card skills col-lg-3 col-md-6">
+        <div class="boot card skills col-lg-3 col-md-6">
             <div class="card-body">
                 <img class="card-img im" src="images/bootstrap.png">
                 <h3 class="card-title">Bootstrap</h3>
-                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress temp" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%"></div>
                   </div>
             </div>
 
         </div>
 
-        <div class="css card skills col-lg-3 col-md-6">
+        <div class="js card skills col-lg-3 col-md-6">
             <div class="card-body">
                 <img class="card-img im" src="images/js.png">
                 <h3 class="card-title">javascript</h3>
-                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress temp" role="progressbar" aria-label="Animated striped example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 40%"></div>
                   </div>
             </div>
 
         </div>
-        <div class="css card skills col-lg-3 col-md-6">
+        <div class="node card skills col-lg-3 col-md-6">
             <div class="card-body">
                 <img class="card-img im" src="images/nodejs.png">
                 <h3 class="card-title">Node.js</h3>
-                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress temp" role="progressbar" aria-label="Animated striped example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 40%"></div>
                   </div>
             </div>
@@ -79,7 +111,7 @@
             <div class="card-body">
                 <img class="card-img im" src="images/c++.png">
                 <h3 class="card-title">DSA</h3>
-                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress temp" role="progressbar" aria-label="Animated striped example" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 90%"></div>
                   </div>
             </div>
