--- a/index.html
+++ b/index.html
@@ -24,6 +24,94 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Montserrat:wght@100;900&family=Pacifico&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Hedvig+Letters+Serif:opsz@12..24&family=Montserrat:wght@100;900&family=Pacifico&family=Permanent+Marker&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+<style>
+    h1{
+        font-family: "Permanent Marker";
+    }
+    p{
+        font-family: "Permanent Marker";
+    }
+    h3{
+        font-family: "Agbalumo";
+    }
+    @media (max-width:973px) and (min-width:505px){
+        h1{
+            font-size: 3rem;
+        }
+        h3{
+            font-size: 1.5rem;
+        }
+        p{
+            font-size: 0.8rem;
+        }
+        .img1{
+            height:400px;
+            width: 250px;
+            margin-bottom: 0px; 
+            padding-top: 50px;  
+            padding-bottom: 0px;
+        }
+        .txt{
+            font-size: 2rem;
+        }
+        .qr{
+            height: 10rem;
+            width: 10rem;
+            padding: 5px;
+        }
+
+    }
+    @media(max-width:505px){
+        .top{
+            display: flex;
+            flex-direction: column;
+        }
+        h1{
+            font-size: 2rem;
+            padding-right: 70px;
+            padding-top: 30px;
+            text-align: center;
+        }
+        h3{
+            font-size: 1.2rem;
+            padding: 30px;
+            margin-right: 80px;
+            margin-bottom: 0px;
+            padding-bottom: 0px;
+        }
+        p{
+            font-size: 1rem;
+        }
+        .txt{
+            font-size: 1rem;
+            padding: 30px;
+            margin: 0px;
+            padding-top: 0px;
+            padding-bottom: 020px;
+            margin-right: 80px;
+        }
+        .img1{
+            height: 12rem;
+            width: 9rem;
+        }
+        .qr{
+            height: 6rem;
+            width: 6rem;
+            margin: 0px;
+            /* margin-bottom: 2px; */
+            margin-right: 80px;
+            /* padding-bottom: 2px; */
+        }
+        .ic{
+            height: 1rem;
+            padding-bottom: 2px;
+            margin-bottom: 0px;
+        }
+    }
+</style>
 </head>
 <body>
 <div id="header">
@@ -58,7 +146,7 @@
         <div class="name"><h3>I'am Sumit Kumar currently a sophomore at BIT Mesra studying AI&ML.
         </h3>
         <br>
-        <p class="txt">Lets connect!</p>
+        <p class="txt">Let's connect!</p>
         <img class="qr" src="qr-code.png">
         </div>
         <div class="img"><img class="img1" src="img2.png"></div>
@@ -72,7 +160,7 @@
     </div> -->
 
     <footer id="footer">
-        <a href="https://www.linkedin.com/in/sumit-kun"><i class="fa-brands fa-linkedin-in fa-beat-fade fa-2xl"></i></i></a>
+        <a href="https://www.linkedin.com/in/sumit-kun"><i class="fa-brands fa-linkedin-in fa-beat-fade fa-2xl ic"></i></i></a>
         <a href="https://instagram.com/sumitt_kun?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa-brands fa-instagram fa-beat-fade fa-2xl ic"></i></a>
         <a href=""><i class="fa-brands fa-x-twitter fa-beat-fade fa-2xl ic"></i></a>
         <a href=""><i class="fa-solid fa-envelope fa-beat-fade fa-2xl ic"></i></a>
