added hover effects

--- a/about.html
+++ b/about.html
@@ -47,6 +47,9 @@
           font-family: "Agbalumo";
           
         }
+        img:hover {
+  transform: scale(1.1); 
+}
         @media (max-width:1110px){
             .my_pic{
               height: 17rem;
