--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     h3{
         font-family: "Agbalumo";
     }
+    img:hover {
+     transform: scale(1.2); 
+    }
     @media (max-width:973px) and (min-width:505px){
         h1{
             font-size: 3rem;
